--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^5.10.0",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "axios": "^0.21.0",
     "firebase": "^8.1.2",
     "native-base": "^2.13.14",
     "react": "16.13.1",
